--- a/views/addPlant.ejs
+++ b/views/addPlant.ejs
@@ -1,5 +1,11 @@
 <%- include("partials/UserHeader.ejs") %>
 
+<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+      <h1 class="h2">Dashboard</h1>
+  </div>
+  
+
 <div class="container">
   <h1>Add New Plant</h1>
   <form action="/add-plant" method="POST">
@@ -35,5 +41,11 @@
     <button type="submit" class="btn btn-success">Add Plant</button>
   </form>
 </div>
+</main>
+</div>
+</div>
+
+
+
 
 <%- include("partials/UserFooter.ejs") %>
