--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -1,6 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+:root {
+    --accent-color: #5C67F7;
+    --button-hover: #48a2fd;
+    --light-placeholder:#6E829F;
+    --white-text:#FFFFFF;
+  }
 p{
     font-size: 16px;
 }
@@ -174,7 +179,22 @@ a{
 }
 
 
-.plants-container{
-    margin: auto;
-    max-width: 900px;
+/* DASHBOARD PLANTS */
+.not-watered-plants {
+    padding: 20px;
+    border-radius: 10px;
+    background-color: var(--accent-color);
+    width: auto;
+   
 }
+.container-water{
+  color: white;
+  width: 100%;
+  overflow: auto;
+  
+}
+
+
+
+
+
