--- a/views/community.ejs
+++ b/views/community.ejs
@@ -1,10 +1,10 @@
 <%- include("partials/UserHeader.ejs") %>
 
-
-
-<body>
-    <div class="container">
-        <h4 class="mb-4">Community and Feedbacks</h4>
+<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <h1 class="h2">Community</h1>
+    </div>
+    <div class="container"></div>
         <div id="comments">
             <!-- Comments will be loaded here -->
         </div>
@@ -90,5 +90,11 @@
             loadComments();
         });
     </script>
+</main>
+</div>
+</div>
+
+
+    
     
 <%- include("partials/UserFooter.ejs") %>
