--- a/views/partials/UserFooter.ejs
+++ b/views/partials/UserFooter.ejs
@@ -1,12 +1,39 @@
 
-      <!-- Add Bootstrap JS and dependencies -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    
+    
+     <div id="spinner" class="spinner-container" style="display: none">
+      <div class="spinner">
+          <img src="/images/spinner.svg" alt="" width="100px" />
+      </div>
+  </div>
+  
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+   <script>
 
-  
-  <script>
-  
-  $(document).ready(function(){
+      // Highlight the active navigation link based on the current URL path
+      document.addEventListener('DOMContentLoaded', function() {
+            const currentPath = window.location.pathname;
+            const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
+
+            navLinks.forEach(link => {
+                if (link.getAttribute('href') === currentPath) {
+                    link.classList.add('active');
+                } else {
+                    link.classList.remove('active');
+                }
+            });
+        });
+        
+        window.addEventListener("load", function () {
+            document.getElementById("spinner").style.display = "none";
+        });
+
+        document.addEventListener("DOMContentLoaded", function () {
+            document.getElementById("spinner").style.display = "flex";
+        });
+       
+    $(document).ready(function(){
     $("#termBox").hide();
   
     $("#agreeTerms").change(function(){
@@ -38,8 +65,7 @@
     event.preventDefault();
   })
   
-  </script>
-    </body>
-  
+   </script>
+</body>
+</html>
     
-    </html>
