--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -10,6 +10,7 @@ p{
     font-size: 16px;
 }
 a{
+    color: black;
     text-decoration: none;
 }
 .fsize-13{
@@ -193,8 +194,92 @@ a{
   overflow: auto;
   
 }
+/* SIDEBAR */
+.side-nav-item{
+    margin: auto;
+    width: 200px;
+    background-color: transparent;
+    padding: 8px 8px 8px 25px;
+    
+}
+.side-nav-item.addActive {
+    background-color: white;
+    border-radius: 20px;
+}
 
+/* UPLOAD PLANT */
+    /* Hide the default file input */
+    .custom-file-upload input[type="file"] {
+        display: none;
+    }
 
+    /* Style the custom file upload button */
+    .custom-file-upload {
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 16px;
+        color: #fff;
+        background-color: #007bff;
+        border: 1px solid #007bff;
+        border-radius: 5px;
+        cursor: pointer;
+        text-align: center;
+    }
 
+    .custom-file-upload:hover {
+        background-color: #0056b3;
+        border-color: #0056b3;
+    }
 
+    /* Style the submit button */
+    .submit-button {
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 16px;
+        color: #fff;
+        background-color: #28a745;
+        border: 1px solid #28a745;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-left: 10px;
+    }
 
+    .submit-button:hover {
+        background-color: #218838;
+        border-color: #1e7e34;
+    }
+    .image-preview{
+      width: 200px; 
+      height: 200px;
+      object-fit: cover;
+    }
+
+/* HAMBURGER ANIMATION */
+.menu-bar {
+    display: inline-block;
+    cursor: pointer;
+  }
+  
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
+  
+  /* Change to X when clicked */
+  #menu-toggle {
+    font-size: 24px;
+    border: none;
+    background: none;
+    cursor: pointer;
+}
+
+#menuIcon {
+    transition: transform 0.3s ease;
+}
+
+.rotated {
+    transform: rotate(180deg);
+}
